--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -40,7 +40,7 @@ header{
 /* ===================== ME ===================== */
 
 .me{
-    background: linear-gradient(var(--color-primary), transparent);
+    /*background: linear-gradient(var(--color-primary), transparent);*/
     width: 22rem;
     height: 30rem;
     position: absolute;
